add second page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,8 +6,115 @@
     <meta name="viewport" content="width=device-width,target-densitydpi=high-dpi,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
   </head>
   <body>
-    <h3>hello</h3>
+	<div class="page" id="page1">
+		<div class="page-pl-wrap pr">
+			<div class="top1_logo pa">
+		     	<img src="http://wrigley.image.alimmdn.com/h5/logo250112.png">
+		    </div>
+		</div>
+	    <!--闪烁的糖果-->
+	    <div class="top1-content-wrap">
+	    	<div class="top1-wrap">
+	    		<div class="top1_con w60 ">
+	    			<div class="pr-box">
+	    				<span class="circle y_one  big"><img src="http://wrigley.image.alimmdn.com/h5/yellow.png"></span>
+				 	 	<span class="circle y_two big2"><img src="http://wrigley.image.alimmdn.com/h5/yellow.png"></span>
+				 	 	<span class="circle jue_one big"><img src="http://wrigley.image.alimmdn.com/h5/org.png"></span>
+				 	 	<span class="circle jue_two  big2"><img src="http://wrigley.image.alimmdn.com/h5/org.png"></span>
+				        <span class="circle hong_one big"><img src="http://wrigley.image.alimmdn.com/h5/red.png"></span>
+				 	 	<span class="circle hong_two big2"><img src="http://wrigley.image.alimmdn.com/h5/red.png"></span>
+				 	 	<span class="circle lv_one big"><img src="http://wrigley.image.alimmdn.com/h5/green.png"></span>
+				 	 	<span class="circle lv_two big2"><img src="http://wrigley.image.alimmdn.com/h5/green.png"></span>
+				 	 	<span class="circle lv_three big"><img src="http://wrigley.image.alimmdn.com/h5/green.png"></span>
+				 	 	<span class="circle lv_four big2"><img src="http://wrigley.image.alimmdn.com/h5/green.png"></span>
+				 	 	<span class="circle zi_one big"><img src="http://wrigley.image.alimmdn.com/h5/pup.png"></span>
+				 	 	<span class="circle zi_two big2"><img src="http://wrigley.image.alimmdn.com/h5/pup.png"></span>
+				 	 	<span class="circle zi_three big2"><img src="http://wrigley.image.alimmdn.com/h5/pup.png"></span>
+		    		</div>
+			 	 	
+		 	 	</div>
+		 	 	<div class="loading_box">
+		 	 		<div class="loading_arc"><img src="http://wrigley.image.alimmdn.com/h5/loading_91.png"></div>
+		 	    	<div class="loading"><span id="time">1</span><span>%</span></div>
+			 	 </div>
+			 	<div class="top1_bottom w60 pr center">
+			 	 	<img src="http://wrigley.image.alimmdn.com/h5/load_title11437.png">
+			 	</div>
+		    </div>
+	    </div>
+	</div>
+	
+	<div class="page page_box" id="page2" style="display:none">
+		<!-- 蒙层-点击这里任性切换步骤 -->
+		<div class="pr meng_box" style="display:none;"> 
+ 	 		<div class="pa meng_top"></div>
+ 	 		<div class="pa meng"><img src="http://wrigley.image.alimmdn.com/h5/tan_box.png"></div>
+ 	 	</div>
+		
+		<!-- 公共部份 -->
+ 	 	<div class="common_box">
+     		<div class="comm_header pr">
+     			<!--问号-->
+	 	 		<div class="wen_box pa">
+	 	 			<a href="">
+	 	 			<img src="http://wrigley.image.alimmdn.com/h5/wen30.png" class="wen"></a>
+	 	 		</div>
+	 	 		<!--音乐-->
+	 	 		<div class="music_box pa">
+	 	 			<img id="music" src="http://wrigley.image.alimmdn.com/h5/music30.png" class="play">
+	 	 		</div>
+     		</div>
+     		<!--动画头部彩虹豆背景和logo-->
+     		<div id="first_box" class="first_box pr" style="display: block;">
+     			<div class="page2_box_bg pa"><img src="http://wrigley.image.alimmdn.com/h5/page_bg228.png"></div>
+     	        <div class="logo_box w90 pr"><img src="http://wrigley.image.alimmdn.com/h5/logo_144117.png"></div>
+     		</div>
+
+     		<!--开始选择的公共头部-->
+     	    <div id="second_box" class="pin_box_common pr" style="display: none;">
+     	    	
+     	    </div>
+
+     	    <div class="page2_box_con" style="display: block;">
+     	    	<!--动画page部分-->
+	     	 	<div id="animate_box" class="pr animate_box" style="display: block;">
+	     	 		<div class="wai_box">
+		     	 		<!--外盒-->
+		     	 		<span class="pa waibu_he" style="display:block;""><img src="http://wrigley.image.alimmdn.com/h5/waihe_294189.png"></span>
+		     	 		<!--手-->
+		     	 		<div class="shou_ta fadeInUp pa" id="shou_ta" style="display: none;"><img src="http://wrigley.image.alimmdn.com/h5/shou_88144.png"></div>
+		     	 	</div>
+		     	 	<!--左边气泡-->
+		     	    <div class="tan_box_left  fadeInDown pa" id="tan_box_left">
+		     	    	<img src="http://wrigley.image.alimmdn.com/h5/yun_146154.png">
+		     	    </div>
+		     	    <div class="pao_title fadeInDown pa">
+		     	    	<img src="http://wrigley.image.alimmdn.com/h5/what_10760.png">
+		     	    </div>
+		     	 	<div class="bling flash pa">
+		     	 		<img src="http://wrigley.image.alimmdn.com/h5/bling_160159.png">
+		     	 	</div>
+	     	 		<!--轻松四步拼好运-->
+		     	 	<div class="qssb_title fadeInDown2 pa"><img src="http://wrigley.image.alimmdn.com/h5/qssb_23330.png"></div>
+		     	 	<!--开始拼按钮-->
+	     	 	    <!-- <div class="strat_but pr rubberBand"><img src="http://wrigley.image.alimmdn.com/h5/start_8687.png" id="start_but" ></div> -->
+	     	 	    <div class="wai_box">
+	     	 			<!--阴影背景-->
+	     	 			<!--<div class="yin_box pa"><img src="http://wrigley.image.alimmdn.com/h5/touyin_245.png"></div>-->
+		     	 		<!--内盒先别删-->
+		     	 		<div class="neihe2 pa"><img src="http://wrigley.image.alimmdn.com/h5/neihe_289187.png"></div>
+		     	 		<!--猫头-->
+		     	 		<div class="tmall pa tmall_up" style="right: 60px;"><img src="http://wrigley.image.alimmdn.com/h5/TMALL_9232.png"></div>
+		     	 		<!--猫头旁边气泡-->
+		     	 		<div class="tamll_pao pa first_up" style="left: 62px;"><img src="http://wrigley.image.alimmdn.com/h5/tan_start14251.png"></div>
+		     	 	</div>
+	     	 	</div>
+     	    </div>
+	    </div>
+	</div>
+
 
     <script type="text/javascript" src="https://g.alicdn.com/sj/lib/jquery.min.js"></script>
+    <script type="text/javascript" src="/javascripts/script.js"></script>
   </body>
 </html>
