add animage effect

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -97,7 +97,7 @@
 	     	 		<!--轻松四步拼好运-->
 		     	 	<div class="qssb_title fadeInDown2 pa"><img src="http://wrigley.image.alimmdn.com/h5/qssb_23330.png"></div>
 		     	 	<!--开始拼按钮-->
-	     	 	    <!-- <div class="strat_but pr rubberBand"><img src="http://wrigley.image.alimmdn.com/h5/start_8687.png" id="start_but" ></div> -->
+	     	 	    <div class="strat_but pr rubberBand"><img src="http://wrigley.image.alimmdn.com/h5/start_8687.png" id="start_but" ></div>
 	     	 	    <div class="wai_box">
 	     	 			<!--阴影背景-->
 	     	 			<!--<div class="yin_box pa"><img src="http://wrigley.image.alimmdn.com/h5/touyin_245.png"></div>-->
@@ -108,6 +108,11 @@
 		     	 		<!--猫头旁边气泡-->
 		     	 		<div class="tamll_pao pa first_up" style="left: 62px;"><img src="http://wrigley.image.alimmdn.com/h5/tan_start14251.png"></div>
 		     	 	</div>
+		     	 	<!--右边气泡-->
+		     	    <div class="tan_box_right fadeInUp2 pa" style="display: none;"><img src="http://wrigley.image.alimmdn.com/h5/yun_right159125.png"></div>
+		     	    <div class="pao_title2 fadeInUp2 pa" style="display: none;"><img src="http://wrigley.image.alimmdn.com/h5/wow_12544.png"></div>
+		     	    <!-- 内盒上的光-->
+		     	 	<div class="bling2 flash3 pa"><img src="http://wrigley.image.alimmdn.com/h5/bling2_22588.png"></div>	
 	     	 	</div>
      	    </div>
 	    </div>
