add click event

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -72,15 +72,66 @@
 
      		<!--开始选择的公共头部-->
      	    <div id="second_box" class="pin_box_common pr" style="display: none;">
-     	    	
-     	    </div>
+     	    	<!--彩虹豆背景-->
+                <div class="page3_box_bg pa"><img src="http://wrigley.image.alimmdn.com/h5/page2_bg336220.png"></div>
+                <!--鞭炮的位置-->
+                <div class="boom_box pa"><img src="http://wrigley.image.alimmdn.com/h5/bianpao_right27260.png"></div>
+     	        <!--导航条-->
+                <div class="daohang_box pa">                     
+                    <!--步骤-->
+                    <div class="buzou_box pa">
+                    <!--选中步骤条-->
+                        <div class="buzou" id="buzou">
+                            <div class="buzou1" id="buzou1 buzou_tiao">
+                                <div class="common_1 common_all" style="display: block;">
+                                    <span class="buzou_bg buzou_bg_one"></span>
+                                    <div class="pa buzou_one"><img src="http://wrigley.image.alimmdn.com/h5/tiao_he4416.png"></div>                 
+                                    <div class="hong_dou hong_dou1 pa pulse"><img src="http://wrigley.image.alimmdn.com/h5/red.png"></div>
+                                </div>
+                            </div>
+                            <div class="buzou2" id="buzou2 buzou_tiao">
+                                <div class="common_2 common_all" style="display: none;">
+                                    <span class="buzou_bg buzou_bg_two"></span>
+                                    <div class="pa buzou_two"><img src="http://wrigley.image.alimmdn.com/h5/two_big4914.png"></div>
+                                    <div class="hong_dou hong_dou2 pa pulse"><img src="http://wrigley.image.alimmdn.com/h5/red.png"></div>
+                                </div>
+                                <div class="pa two_after two_after1" style="display: none;"><img src="http://wrigley.image.alimmdn.com/h5/two_little309.png"></div>
+                                <div class="two_before"><img src="http://wrigley.image.alimmdn.com/h5/two_before2910.png"></div>
+                            </div>
+                            <div class="buzou3" id="buzou3 buzou_tiao">
+                              <div class="common_3 common_all" style="display: none;">
+                                <span class="buzou_bg buzou_bg_three"></span>
+                                <div class="pa buzou_three"><img src="http://wrigley.image.alimmdn.com/h5/three_big4216.png"></div>
+                                <div class="hong_dou hong_dou3 pa pulse"><img src="http://wrigley.image.alimmdn.com/h5/red.png"></div>
+                              </div>
+                              <div class="pa three_after three_after1" style="display: none;"><img src="http://wrigley.image.alimmdn.com/h5/three_little3110.png"></div>
+                              <div class="three_before"><img src="http://wrigley.image.alimmdn.com/h5/three_before2910.png"></div>
+                            </div>
+                            <div class="buzou4" id="buzou4 buzou_tiao">
+                              <div class="common_4 common_all" style="display: none;">
+                                  <span class="buzou_bg_four buzou_bg"></span>
+                                  <div class="pa buzou_four"><img src="http://wrigley.image.alimmdn.com/h5/four_big4416.png"></div>
+                                  <div class="hong_dou hong_dou4 pa pulse"><img src="http://wrigley.image.alimmdn.com/h5/red.png"></div>
+                                  
+                                  </div>
+                              <div class="four_before"><img src="http://wrigley.image.alimmdn.com/h5/four_before2910.png"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                           
+            </div>
+
+
+
+
 
      	    <div class="page2_box_con" style="display: block;">
      	    	<!--动画page部分-->
 	     	 	<div id="animate_box" class="pr animate_box" style="display: block;">
 	     	 		<div class="wai_box">
 		     	 		<!--外盒-->
-		     	 		<span class="pa waibu_he" style="display:block;""><img src="http://wrigley.image.alimmdn.com/h5/waihe_294189.png"></span>
+		     	 		<span class="pa waibu_he" style="display:block;"><img src="http://wrigley.image.alimmdn.com/h5/waihe_294189.png"></span>
 		     	 		<!--手-->
 		     	 		<div class="shou_ta fadeInUp pa" id="shou_ta" style="display: none;"><img src="http://wrigley.image.alimmdn.com/h5/shou_88144.png"></div>
 		     	 	</div>
@@ -114,6 +165,175 @@
 		     	    <!-- 内盒上的光-->
 		     	 	<div class="bling2 flash3 pa"><img src="http://wrigley.image.alimmdn.com/h5/bling2_22588.png"></div>	
 	     	 	</div>
+
+          <!--开始拼字-->
+          <div id="start_pin" class="pr start_pin"  style="display:none;">
+            <div class="wai_box">
+                <!--阴影背景-->
+                  <!--<div class="yin_box pa"><img src="http://wrigley.image.alimmdn.com/h5/touyin_245.png"></div>-->
+              </div>
+              <div class="kongbai_box">
+                <!--猫头-->
+                <div class="tmall pa page3_tmall_up tmall_box" style="display: block;right: 44px;">
+                  <img src="http://wrigley.image.alimmdn.com/h5/TMALL_9232.png">
+                </div>
+                <!--猫头旁边气泡-->
+                <div class="all_paopao">
+                  <div id="pao_1" class="tamll_pao2 pa page3_fadeInDown2 hyhe" style="display: block;left: 26px;"><img src="http://wrigley.image.alimmdn.com/h5/choose_he14251.png"></div>
+                  <div id="pao_2" class="tamll_pao2 pa page3_fadeInDown2 phy" style="display: none;left: 28px;"><img src="http://wrigley.image.alimmdn.com/h5/pinhy_14251.png"></div>
+                  <div id="pao_3" class="tamll_pao2 pa page3_fadeInDown2_2 tmp" style="display: none;left: 18px;"><img src="http://wrigley.image.alimmdn.com/h5/hymp15147.png"></div>
+                  <div id="pao_4" class="tamll_pao2 pa page3_fadeInDown2 pgsk" style="display: none;left: 17px;"><img src="http://wrigley.image.alimmdn.com/h5/pgsk15154.png"></div>
+                  <div id="pao_5" class="tamll_pao2 pa page3_fadeInDown3 cmy" style="display: none;left: 25px;"><img src="http://wrigley.image.alimmdn.com/h5/cangmy14262.png"></div>
+                  <div id="pao_6" class="tamll_pao2 pa page3_fadeInDown3 lihai lihai_box" style="display: none;left: 25px;"><img src="http://wrigley.image.alimmdn.com/h5/lihai_my14161.png"></div>
+                </div> 
+
+                <!--最后旁边闪烁的星星-->
+                <div class="shansuo" style="display: none;">
+                  <div class="shansuo_left pa flash2"><img src="http://wrigley.image.alimmdn.com/h5/shanx7394.png"></div> 
+                  <div class="shansuo_right pa flash2"><img src="http://wrigley.image.alimmdn.com/h5/shan2x7394.png"></div> 
+                </div>
+
+                <!--产品编号-->
+                <div class="bianhao_box" style="display: none;">
+                  <div class="bianhao pa bounceIn" ><img src="http://wrigley.image.alimmdn.com/h5/bianhao8419.png"></div>
+                  <div class="bianhao_con pa bounceIn"><span>123654789</span></div>
+                </div>  
+                
+                <div id="all_box"></div>
+                <div class="box_1_1" id="box_1_1">
+                  <!--1-1选择3个空白内盒-->
+                  <div class="xuanze_box pr">
+                    <div class="pa word_bg" style="z-index: -1;"><img src="http://wrigley.image.alimmdn.com/h5/word_bg314129.png"></div>
+                    <div class="pr swiper1_1">
+                      <div id="swiper_1" class="pa swiper_all">               
+                        <div id="word_0" class="word pa">
+                          <img src="http://wrigley.image.alimmdn.com/h5/neiheword_0.png">
+                        </div>                        
+                        <div class="neihe_box pa" style="left: 0;">
+                          <img src="http://wrigley.image.alimmdn.com/h5/neibox_1.png">
+                        </div>
+                        
+                        <div class="comm_top pa"><img src="http://wrigley.image.alimmdn.com/h5/myskittles_5732.png"></div>
+                        <div id="pin_bottom_0" class="pin_bottom pa">
+                            
+                          </div>
+                          <div id="pinto_0" class="pinto pinto0 pa">
+                          
+                          </div>
+                          <div class="pa to_name">
+                          <div class="pr to_font">
+                            <font id="to_name"></font>
+                          </div>
+                        </div>
+                        
+                      </div>
+                      
+                    </div>
+                  </div>
+                  <!--1-1选择3个空白内盒对应的盒子名称-->
+                  <div class="xuanze_name pr">
+                    <div class="pa swiper1_2">
+                      <div id="boxname_1" class="box_name pa">
+                        <img src="http://wrigley.image.alimmdn.com/h5/kuanshi_1.png">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="xuanze_wordname pr" style="display: none;">
+                    <div class="pa swiper2_2">
+                      <div id="fuyu_1" class="fuyu_all">
+                        <img src="http://wrigley.image.alimmdn.com/h5/message_1.png">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="xuanze_bottom pr" style="display: none;">
+                    <div class="pa input_bg"><img src="http://wrigley.image.alimmdn.com/h5/input_bg11734.png"></div>
+                    <div class="pa swiper3_2">
+                      <div id="duih_1" class="duih_all duih1 pa">
+                        <img src="http://wrigley.image.alimmdn.com/h5/to_1.png">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="pin_box pr" style="display: none;">
+                    <div class="liuyan pa">
+                      <input type="text" name="liuyan" id="liuyan" placeholder="请输入赠送人名字" maxlength="4" onkeyup="initToName();" />
+                    </div>
+                  </div>
+
+
+                  <!--8个最后合上的盒子-->
+                  <div class="zuihou_box pr" style="display: none;">
+                    <span id="waibu_he1" class="pa waiall_box zuizong_box box_left"><img src="http://wrigley.image.alimmdn.com/h5/waihe_1.png"></span>
+                  </div> 
+                </div>
+
+
+                <!--左右箭头-->
+                <div class="jiantou_box">
+                  <!--箭头,下一步：控制1-1-->
+                  <div id="miyu_box" class="miyu_box pa button_all" style="display: block;">
+                    <div id="mybut_left" class="but_left pa butleft mybut_left">
+                      <img src="http://wrigley.image.alimmdn.com/h5/left_but45.png">
+                    </div>
+                    <div id="mybut_right" class="but_right pa butright mybut_right">
+                      <img src="http://wrigley.image.alimmdn.com/h5/left_but45.png">
+                    </div>
+                    <!--1-1下一步-->
+                    <div class="next_but pa rubberBand" >
+                      <img src="http://wrigley.image.alimmdn.com/h5/next_but8687.png" id="next1">
+                    </div>
+                  </div>  
+
+                  <!--箭头,下一步：控制2-1-->
+                  <div  id="qndj" class="qndj pa button_all" style="display: none;">
+                    <div id="fybut_left" class="but_left pa butleft">
+                      <img src="http://wrigley.image.alimmdn.com/h5/left_but45.png">
+                    </div>
+                    <div id="fybut_right"  class="but_right pa butright">
+                      <img src="http://wrigley.image.alimmdn.com/h5/left_but45.png">
+                    </div>
+                    <div class="next_but pa rubberBand">
+                      <img src="http://wrigley.image.alimmdn.com/h5/next_but8687.png" id="next2">
+                    </div>
+                  </div>  
+
+
+                  <!--箭头,下一步：控制3-1-->   
+                  <div id="hymp" class="hymp pa button_all" style="display: none;">
+                    <div id="dhbut_left" class="but_left pa butleft">
+                      <img src="http://wrigley.image.alimmdn.com/h5/left_but45.png">
+                    </div>
+                    <div id="dhbut_right"  class="but_right pa butright">
+                      <img src="http://wrigley.image.alimmdn.com/h5/left_but45.png">
+                    </div>
+                    <div class="next_but pa rubberBand">
+                      <img src="http://wrigley.image.alimmdn.com/h5/next_but8687.png" id="next3">
+                    </div>
+                  </div>
+                  
+
+                  <!--下一步：控制4-1--> 
+                    <div id="pin_lastbox" class="pin_lastbox pa button_all" style="display: none;">
+                      <!--拼给谁的按钮-->
+                    <div class="next_but pa rubberBand">
+                      <img src="http://wrigley.image.alimmdn.com/h5/next_but8687.png" id="next4">
+                    </div>
+                    </div>
+
+                    <!--下一步：控制5-1--> 
+                  <div id="last_button" class="last_button button_all" style="display: none;">
+                    <!--完成定制、再来一次-->
+                    <div class="nice_but pa rubberBand">
+                      <img src="http://wrigley.image.alimmdn.com/h5/hongyun_but8687.png" id="nice_but">
+                    </div>
+                    <div class="again_but pa rubberBand">
+                      <img src="http://wrigley.image.alimmdn.com/h5/again_but8687.png" id="again_but" >
+                    </div>
+                  </div>
+
+
+                </div>
+              </div>
+          </div>
      	    </div>
 	    </div>
 	</div>
