add loading pages

--- a/views/ThreeSquirrels.ejs
+++ b/views/ThreeSquirrels.ejs
@@ -15,10 +15,11 @@
 		<!-- 加载页 -->
 	    <div id="loadingPage" class="page loading_page">
 	    	<div class="loading_wrap">
+	    		<img src="/images/loading.png" alt="" class="loading_img">
 	    		<div class="loading" id="loading">
 			      <div class="progress" id="progress"></div>
 			      <p>Loading...</p>
-			   </div>
+			   	</div>
 	    	</div>
 	    	
 	    </div>
