add animate and font

--- a/views/ThreeSquirrels.ejs
+++ b/views/ThreeSquirrels.ejs
@@ -46,7 +46,13 @@
 			</div>
 			<div class="game_result_show game_result_success hidden">
 				<div class="game_tooltip_box center animated fadeInDown">
-					<img src="image/result_1.png" alt="" class="game_unsucess ">
+				<div class="game_data">
+					<img src="image/result_10.png" alt="" class="game_unsucess ">
+					<span class="use_time">9.2s</span>
+					<span class="use_percent">xx%</span>
+					<a href="javascript:;"><img src="image/youhuijuan.png" alt="" class="youhuijiuan"></a>
+				</div>
+					
 					<a href="javascript:;" class="GetPhoto"><img src="image/get_photo.png" alt="" class="get_photo_btn"></a>
 				</div>
 				<!-- <img src="image/result_0.png" alt="" class="game_unsucess animated fadeInDown "> -->
@@ -55,7 +61,17 @@
 			<div class="game_container">
 				<div class="game_header">
 					<div class="game_time ">
-						<!-- <span></span> -->
+						<span class="time_clock"></span>
+						<p style="display:inline-block;width:88px">
+							<span class="time_m_first"></span>
+							<span class="time_m_second"></span>
+							<span class="time_spot"></span>
+							<span class="time_s"></span>
+							<span class="time_s_unit"></span>
+						</p>
+							
+						
+						
 					</div>
 					<div class="game_type">
 						<div class="type type_1"></div>
