--- a/views/ThreeSquirrels.ejs
+++ b/views/ThreeSquirrels.ejs
@@ -29,25 +29,32 @@
         </div>
 		<!-- 欢迎页 -->
 		<div id="welcomePage" class="page welcome_page">
-			<div class="game_mask hidden"></div>
-			<div class="game_rule_show hidden">
-				<div class="game_rule_box animated fadeInDown">
-					<div class="game_box_2">
-						<img src="image/gamerule.png" alt="" class="game_rule  ">
-						<a id="goToGame" href="javascript:;" ><img src="image/go.png" alt="" class="go"></a>
+			<div class="dis_top"></div>
+			<div class="dis_body">
+				<div class="game_mask hidden"></div>
+				<div class="game_rule_show hidden">
+					<div class="game_rule_box animated fadeInDown">
+						<div class="game_box_2">
+							<img src="image/gamerule.png" alt="" class="game_rule  ">
+							<a id="goToGame" href="javascript:;" ><img src="image/go.png" alt="" class="go"></a>
+						</div>
 					</div>
 				</div>
+				
+	           <img src="image/tfbodys.png" class="animated fadeIn tfbodys" alt="">
+	           <img src="image/more.png" class="animated fadeInDown more" alt="">
+	           <img src="image/welcome.gif" class="animated fadeInDown welcome" alt="">
+	           <!-- <div class="welcome_gif_wrap"></div> -->
+	           <a href="#" id="openGame"><img src="image/open.png" alt="" class="open animated fadeIn" ></a>
 			</div>
-			<div class="game_box_3 hidden">
+           <div class="dis_top"></div>
+        </div>
+		
+		<div id="readyGoPage" class="page readygo_page hidden">
+			<div class="game_box_ready">
 				<img src="image/readygo.gif" alt="" class="readygo">
 			</div>
-           <img src="image/tfbodys.png" class="animated fadeIn tfbodys" alt="">
-           <img src="image/more.png" class="animated fadeInDown more" alt="">
-           <img src="image/welcome.gif" class="animated fadeInDown welcome" alt="">
-           <!-- <div class="welcome_gif_wrap"></div> -->
-           <a href="#" id="openGame"><img src="image/open.png" alt="" class="open animated fadeIn" ></a>
-        </div>
-
+		</div>
 
 
 		
@@ -55,7 +62,7 @@
 
         
 	    <!-- 游戏规则页 -->
-		<!-- <div id="gameRulesPage" class="page game_rules_page"></div> -->
+		<div id="gameRulesPage" class="page game_rules_page"></div>
 
 
 
