--- a/views/ThreeSquirrels.ejs
+++ b/views/ThreeSquirrels.ejs
@@ -15,7 +15,7 @@
 
 	<div class="body-wrap">
         <!-- 加载页 -->
-        <div id="loadingPage" class="page loading_page" >
+        <div id="loadingPage" class="page loading_page">
             <div class="loading_wrap">
                 <img src="/image/loading.png" alt="" class="loading_img">
                 <div class="loading" id="loading">
@@ -28,7 +28,7 @@
             
         </div>
 		<!-- 欢迎页 -->
-		<div id="welcomePage" class="page welcome_page">
+		<div id="welcomePage" class="page welcome_page hidden">
 			<div class="dis_top"></div>
 			<div class="dis_body">
 				<div class="game_mask hidden"></div>
@@ -72,13 +72,13 @@
 			<div class="game_result_show game_result_success hidden">
 				<div class="game_tooltip_box center animated fadeInDown">
 				<div class="game_data">
-					<img src="image/result_10.png" alt="" class="game_unsucess ">
+					<img src="image/result_10.png" alt="" class="game_sucess">
 					<span class="use_time"></span>
 					<span class="use_percent">xx%</span>
 					<a href="javascript:;"><img src="image/youhuijuan.png" alt="" class="youhuijiuan"></a>
 				</div>
 					
-					<a href="javascript:;" class="GetPhoto"><img src="image/get_photo.png" alt="" class="get_photo_btn"></a>
+					<a href="javascript:;" class="GetPhoto"><img src="image/get_photo.png" alt="" class="get_photo_btn" style="width:60%;height:auto"></a>
 				</div>
 				<!-- <img src="image/result_0.png" alt="" class="game_unsucess animated fadeInDown "> -->
 			</div>
